app/stylesheets/base.scss
.tzolkin {
  &-container {
    position: relative;
    display: inline-block;
  }

  &-timepicker,
  &-datepicker,
  &-datetimepicker {
    position: absolute;
    top: rem-calc(30);
    left: 0;
    background: $off-white;
    border: 1px solid $light-grey;
  }

  &-datepicker {
    min-width: rem-calc(250);
    padding: $half;
  }

  &-timepicker {
    left: rem-calc(20);
    padding: 0 rem-calc(3);
  }

  &-datetimepicker {
    display: flex;
    .tzolkin-timepicker {
      position: relative;
      top: initial;
      left: initial;
      background: transparent;
      border: none;
    }
  }

  &-month {
    margin-top: rem-calc(4);
    border: 1px solid #ccc;
  }

  &-selector {
    position: relative;
    flex: 1;
    margin: 0 $half;

    &__dropdown {
      position: absolute;
      top: $basic;
      left: 0;
      z-index: 100;
      background: #fff;
      border: 1px solid #eee;
      padding: $quarter;

      li {
        padding: rem-calc(3) $quarter;
        border-bottom: 1px solid #eee;
        cursor: pointer;

        &:last-child { border-bottom: none; }

        &:hover {
          background: rgba($orange, 0.6);
        }
      }
    }
  }
}

